# TODO-api

./: README.md  docker-compose.yml  main.py  netlify.toml  pyproject.toml  render.yaml  requirement.txt
APP/: __init__.py
APP/TODO/: database.py  model.py  routes.py
app/: __init__.py
app/TODO/: __init__.py  pydantic_schema.py  routes.py
app/USER/: __init__.py  userPydanticModel.py  user_route.py
app/config/: __init__.py  db.py
app/models/: todo_model.py  user_model.py
app/services/: __init__.py  jwt_service.py
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/TODO/: pydantic_schema.py  routes.py
backend/app/USER/: __init__.py  userPydanticModel.py  user_route.py
backend/app/config/: db.py
backend/app/dependency/: depency.py
backend/app/models/: __init__.py  user_model.py
backend/app/services/: jwt_service.py  password_hash.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.module.css  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AuthPages.module.css  HomePage.module.css  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  TodosPage.module.css  TodosPage.tsx
frontend/src/services/: apiClient.ts  authConfig.ts  authService.ts  authSession.ts  todoService.ts
frontend/src/types/: api.ts
